Fix predefined brush widget doesn't crash when no brush is selected

To trigger the crash you need to create the brush with the same name
twice.

BUG:449226